# ai_assistant_lenie

./: .claudeignore  .dockerignore  .env_example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CI_CD.md  CLAUDE.md  Makefile  README.md  pyproject.toml  response.json  response2.json
backend/: .safety-project.ini  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  document_prepare_regexp_by_ai.py  documents_fix_missing_markdown.py  documents_pipeline.py  email_import.py  markdown_to_embedding.py  pyproject.toml  server.py  web_documents_do_the_needful_new.py  web_documents_fix_missing_markdown.py  webdocument_md_decode.py  webdocument_prepare_regexp_by_ai.py  youtube_add.py
backend/alembic/: env.py
backend/alembic/versions/: 5edee6f44633_create_control_questions.py  7d0f82796715_add_foreign_key_constraints_to_web_.py  906d2cc23d09_create_lookup_tables_and_seed_data.py  a1b2c3d4e5f6_create_import_logs_table.py  a2b3c4d5e6f7_rename_date_from_to_published_on.py  a3b4c5d6e7f8_create_geocode_cache.py  a4b5c6d7e8f9_merge_publishers_by_registrable_domain.py  a5b6c7d8e9f0_add_article_truncated_error_type.py  a7b8c9d0e1f2_add_chunk_id_to_websites_embeddings.py  a8b9c0d1e2f3_rename_processing_status.py  a9b0c1d2e3f4_create_document_events.py  b0c1d2e3f4a5_create_sources_table.py  b1c2d3e4f5a6_add_date_from_source_to_web_documents.py  b2c3d4e5f6a7_alter_import_logs_parameters_to_jsonb.py  b3c4d5e6f7a8_rename_author_to_byline.py  b4c5d6e7f8a9_create_persons_tables.py  b6c7d8e9f0a1_add_review_status_to_removed_lines.py  b7e2f19c4a05_add_enrichment_checked_at_columns.py  b8c9d0e1f2a3_add_text_extracted_to_web_documents.py  b9c0d1e2f3a4_rename_ingested_at_and_subject_period.py  c07c2d94a19f_add_relative_to_published_on_method.py  c0d1e2f3a4b5_add_llm_usage_document_context.py  c1d2e3f4a5b6_add_author_biography_review.py  c2d3e4f5a6b7_add_author_source_to_web_documents.py  c3d4e5f6a7b8_add_reviewed_at_and_obsidian_note_paths.py  c4d5e6f7a8b9_create_collections_drop_project.py  c5d6e7f8a9b0_create_ner_exclusions.py  c7d8e9f0a1b2_create_cited_publications.py  c8d9eafb0c1d_create_document_images.py  c9d0e1f2a3b4_create_document_removed_lines.py  d0e1f2a3b4c5_create_reader_user_tables.py  d18f4a6b2c7e_remove_translation_processing_states.py  d1e2f3a4b5c6_add_llm_usage_analysis_run.py  d2e3f4a5b6c7_create_information_sources.py  d3e4f5a6b7c8_create_search_interpretation_logs.py  d4e5f6a7b8c9_rename_s3_uuid_to_uuid.py  d5e6f7a8b9c0_discovery_sources_normalization.py  d6e7f8a9b0c1_add_variants_to_document_entities.py  d8e9f0a1b2c3_create_document_analysis_jobs.py  e19a5b7c3d8f_create_entity_review_decisions.py  (+22 more)
backend/data/: CLAUDE.md  ner_normalization.json  site_rules.json
backend/database/: CLAUDE.md
backend/database/init/: 02-create-extension.sql  03-create-table.sql  04-create-table.sql  05-migrate-ready-for-translation.sql  06-drop-english-columns.sql  07-add-transcript-needed.sql  08-fix-language-typo.sql  09-create-lookup-tables.sql  10-add-foreign-keys.sql  11-create-transcription-log.sql  12-add-video-description.sql  13-create-analysis-tables.sql  14-add-speakers-to-analysis-runs.sql  15-add-analysis-run-workflow-columns.sql  16-add-chunk-id-to-embeddings.sql  17-add-text-extracted-to-web-documents.sql  18-create-document-removed-lines.sql  19-create-reader-user-tables.sql  20-create-api-keys.sql  21-create-document-entities.sql  22-create-geocode-cache.sql  23-create-persons-tables.sql  24-create-ner-exclusions.sql  25-create-infra-geometries.sql  26-create-document-references.sql  27-create-document-events.sql  28-create-sources.sql  29-add-author-biography-review.sql  30-create-information-sources.sql  31-add-tags-to-user-document-notes.sql  31-create-cited-publications.sql  32-create-document-analysis-jobs.sql  33-create-collections.sql  34-create-document-images.sql
backend/imports/: CLAUDE.md  api_key_admin.py  article_browser.py  backfill_missing_tags.py  backfill_organizations.py  backfill_relative_publication_dates.py  book_normalize.py  control_questions.py  dynamodb_sync.py  evaluate_search_queries.py  extract_events.py  extract_references.py  extract_time_periods.py  extract_tones.py  feed_monitor.py  feeds.yaml  fetch_chunks.py  fix_duplicate_analysis_runs.py  fix_place_tags.py  freedom_house_import.py  import_control_questions.py  migrate_data_to_cache.py  refresh_entities.py  search_reports.py  select_control_questions.py  storage_migrate.py  unknown_news_import.py  youtube_add.py  youtube_backfill_author.py  youtube_batch_analyze.py
backend/imports/book_maps/: polska_do_potegi.json
backend/mcp_server/: config.py  errors.py  main.py  path_security.py
backend/mcp_server/tools/: _common.py  lenie.py  obsidian.py
backend/scripts/: notion_changelog.py  review_removed_lines.py
backend/test_code/: CLAUDE.md  _regen_html.py  aws_dynamodb_new_articles.py  cloudferro_ark_labs_models.py  cloudferro_embeddings.py  dateparser_user.py  embeddings_search.py  firecrawl.py  gcloud_firestore.py  gcloud_firestore_audiobooks.py  gcloud_firestore_example.py  google_calendar_to_obsidian.py  linkedin_profile.py  model_identity_comparison.py  obsidian_clean_jurnal.py  ocr_mistral.py  serper_dev.py  vault_tests.py  webdocument_bielik_popraw.py  webdocument_bielik_popraw_2.py  youtube_batch_analyze.py
backend/tests/: CLAUDE.md
backend/tests/fixtures/: search_query_cases.json
backend/tests/integration/: test_fk_constraints.py  test_website_get.py
backend/tests/unit/: test_ai.py  test_ai_intent_parser.py  test_alembic_setup.py  test_article_browser_utils.py  (+107 more)
ner_service/: Dockerfile  README.md  pyproject.toml
ner_service/src/: main.py
ner_service/tests/: test_main.py
shared_python/unified-config-loader/: LICENSE  README.md  pyproject.toml
slack_bot/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  client.py  pyproject.toml  slack-app-manifest.yaml
slack_bot/src/: __init__.py  api_client.py  commands.py  config.py  dm_handler.py  health_monitor.py  intent_parser.py  main.py  mention_handler.py  search_formatter.py
(+786 files in other folders)
