[project]
name = "lenie-server"
version = "0.3.13.0"
description = "Personal AI assistant for collecting, managing, and searching data using LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lenie AI Team" }
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "pytest",
    "pytest-html",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "pre-commit",
    "pypdf",
    "firecrawl-py",
    "filetype",
    "markdownify",
    "unidecode",
    "neo4j",
    "langfuse",
    "chardet",
    "boto3",
    "hvac",
    "dateparser",
]

[project.optional-dependencies]
markdown = [
    "markitdown",
    "psycopg2-binary",
    "python-dotenv",
    "boto3",
    "html2markdown",
    "html2text",
]

docker = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "pytest",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "unidecode",
    "boto3",
    "aws-xray-sdk",
    "langfuse",
]

all = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "boto3",
    "pytest",
    "botocore",
    "urllib3",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "aws-xray-sdk",
    "pre-commit",
    "pypdf",
    "firecrawl-py",
    "filetype",
    "markdownify",
    "markitdown",
    "unidecode",
    "neo4j",
    "langfuse",
    "chardet",
    "llm",
    "dateparser",
    "hvac",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-html",
    "pre-commit",
    "ruff",
]

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
