[project]
name = "lenie-server"
version = "0.3.13.0"
description = "Personal AI assistant for collecting, managing, and searching data using LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lenie AI Team" }
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "pytest",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "pre-commit",
    "pypdf>=6.7.1",
    "firecrawl-py",
    "filetype",
    "markdownify",
    "unidecode",
    "neo4j",
    "langfuse",
    "chardet",
    "boto3",
    "dateparser",
    "ruamel.yaml>=0.18",
    "unified-config-loader[vault,aws]",
    "boto3-stubs~=1.42.43",
    "sqlalchemy>=2.0,<3.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
    "markitdown>=0.1.4",
    "apify-client>=2.5.0",
    "mcp>=1.27.0,<2.0",
]

[project.optional-dependencies]
vault = [
    "hvac",
]
markdown = [
    "markitdown",
    "psycopg2-binary",
    "python-dotenv",
    "boto3",
    "html2markdown",
    "html2text",
]

notion = [
    "notion-client>=2.2.0,<3",
]

docker = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "pytest",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "unidecode",
    "boto3",
    "aws-xray-sdk",
    "langfuse",
    "hvac",
    "sqlalchemy>=2.0,<3.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
]

all = [
    "requests",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "boto3",
    "pytest",
    "botocore",
    "urllib3",
    "pytubefix",
    "youtube-transcript-api",
    "assemblyai",
    "aws-xray-sdk",
    "pre-commit",
    "pypdf>=6.7.1",
    "firecrawl-py",
    "filetype",
    "markdownify",
    "markitdown",
    "unidecode",
    "neo4j",
    "langfuse",
    "chardet",
    "llm",
    "dateparser",
    "hvac",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "notion-client>=2.2.0,<3",
    "sqlalchemy>=2.0,<3.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library", "imports"]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.sources]
unified-config-loader = { path = "../shared_python/unified-config-loader" }

[tool.pytest.ini_options]
testpaths = ["tests", "mcp_server/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
