[project]
name = "lenie-ner-service"
version = "0.1.0"
description = "Internal NER microservice (spaCy pl_core_news_lg) for Project Lenie"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lenie AI Team" }
]

dependencies = [
    "flask>=3.0",
    "spacy>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
